# kernel

./: CMakeLists.txt  Makefile  a.c  compile_aout.py  make.sh  recmake.sh
aout/: CMakeLists.txt  aout.h  loader.c  loader.h
boot/: CMakeLists.txt  boot.s  grub.cfg  linker.ld
kernel/: CMakeLists.txt  gdt.c  gdt.h  handlers.c  handlers_asm.s  idt.c  idt.h  io.c  jump_usermode.s  kernel.c  kernel.h  paging.c  paging.h  pic.c  pic.h  tss.h  tty.c  tty.h  user.c  user.h
libc/: CMakeLists.txt  itoa.c  itoa.h  reverse.c  reverse.h
memory/: CMakeLists.txt  kmalloc.c  kmalloc.h  memory.c  memory.h  v_allocator.c  v_allocator.h
paging/: CMakeLists.txt  paging.c
